fixed field alignment in form

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -107,12 +107,8 @@ $nav-backgroundcolor: #F3EED9;
 .contact-info-form{
 
     padding-top: 30px;
+    padding-left: 0;
     
-}
-
-.form-message{
-    margin: 0;
-    padding: 0;
 }
 
 .form-buttons{
